--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="rpsmain.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body background="\images\33376484.jpg">
+<body background="images\33376484.jpg">
     <div class="howBox">
       <div class="rule"><h1>Rock Paper Scissors</h1></div>
       <p class="ruless">Objective:<br> The objective of the game is to defeat your opponent by selecting a weapon that defeats their choice.<br><br>
