--- a/ROCK_PAPER_SCISSOR-game.html
+++ b/ROCK_PAPER_SCISSOR-game.html
@@ -106,9 +106,9 @@
     </head>
     <body bgcolor="#0E124D">
         <h4 class="donot">for more games do not contact akashkarthi620@gmail.com</h4>
-        <img class="rockimg" src="\images\rock.png" alt="error">
-        <img class="paperimg" src="\images\paper.png" alt="error">
-        <img class="scissorsimg" src="\images\scissors.png" alt="error">
+        <img class="rockimg" src="images\rock.png" alt="error">
+        <img class="paperimg" src="images\paper.png" alt="error">
+        <img class="scissorsimg" src="images\scissors.png" alt="error">
         <div class="resBox"></div>
         <h1 class="mainText"><span style="color: #D04671;">ROCK</span> <SPAN style="color: #DDC14B;">PAPER</SPAN> <SPAN style="color: #71B8C2;">SCISSORS</SPAN></h1>
         <h1 style="position:fixed;top:530px;left:600px;color: black;" id="cput"></h1>
